# watcher

src/: CMakeLists.txt  watcher.pro
src/ActionWindow/: ActionWindow.pro  CMakeLists.txt  actionwindow.cpp  actionwindow.h  actionwindow.ui
src/ActionWindow/include/: abstractwidget.h  clienttcpsocket.h  global.h
src/Client/: CMakeLists.txt  Client.pro  aurorizationdialog.cpp  aurorizationdialog.h  client.qrc  connectdialog.cpp  connectdialog.h  databasemanager.cpp  databasemanager.h  databasetypes.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ClientTcpSocket/: CMakeLists.txt  ClientTcpSocket.pro  abstractwidget.cpp  abstractwidget.h  basewidget.h  clientsocket.h  clienttcpsocket.cpp  clienttcpsocket.h  global.h  responcedata.h
src/ClientTcpSocket/querry/: abstractquerry.h  clipboardquery.cpp  clipboardquery.h  controlsquerry.cpp  controlsquerry.h  executionreportquerry.cpp  executionreportquerry.h  getcontrolinfoquerry.cpp  getcontrolinfoquerry.h  getmailpropertiesquerry.cpp  getmailpropertiesquerry.h  getpicturepropertiesquerry.cpp  getpicturepropertiesquerry.h  picturequerry.cpp  picturequerry.h  settingsquery.cpp  settingsquery.h  windowsquerry.cpp  windowsquerry.h
src/ClipboardWindow/: Button.qml  CMakeLists.txt  clipboard.qml  clipboardmodel.cpp  clipboardmodel.h  clipboardwindow.cpp  clipboardwindow.h  clipboardwindow.qrc
src/PictureWindow/: CMakeLists.txt  PictureWindow.pro  pictureswidget.cpp  pictureswidget.h  picturewindow.cpp  picturewindow.h  picturewindow.qrc  picturewindow.ui  propertydialog.cpp  propertydialog.h  propertydialog.ui
src/PictureWindow/include/: basewidget.h  clienttcpsocket.h  global.h
src/PluginExample/: PluginExample.pro  pluginexample.cpp  pluginexample.h  pluginexample.ui
src/PluginExample/include/: abstractwidget.h  clienttcpsocket.h  global.h
src/Server/: CMakeLists.txt  Server.pro  clipboardsingleton.cpp  clipboardsingleton.h  commonfunctions.cpp  commonfunctions.h  main.cpp  picturesingleton.h  picturetimer.cpp  picturetimer.h  server.qrc  singletonthread.h
src/Server/database/: databasemanager.cpp  databasemanager.h  databasetypes.h
src/Server/database/query/: abstractdatabasequery.h  autorizationquery.cpp  autorizationquery.h  clipboardquery.cpp  clipboardquery.h  databasequerycommon.cpp  databasequerycommon.h  mailquery.cpp  mailquery.h  picturepropertiesquery.cpp  picturepropertiesquery.h  picturequery.cpp  picturequery.h  settingsquery.cpp  settingsquery.h  userquery.cpp  userquery.h
src/Server/gui/: adduserdialog.cpp  adduserdialog.h  autorizationdialog.cpp  autorizationdialog.h  commonsettingsdialog.cpp  commonsettingsdialog.h  commonsettingsdialog.ui  settingsdialog.cpp  settingsdialog.h  traysettings.cpp  traysettings.h  usersettings.cpp  usersettings.h
src/Server/helper/: objectfactory.h
src/Server/network/: querythread.cpp  querythread.h  socketthread.h  tcpserver.cpp  tcpserver.h  tcpsocket.cpp  tcpsocket.h
src/Server/network/query/: allpicturesquery.cpp  allpicturesquery.h  autorizationquery.cpp  autorizationquery.h  clipboardquery.cpp  clipboardquery.h  controlsquery.cpp  controlsquery.h  currentdatepicturesquery.cpp  currentdatepicturesquery.h  getcontrolinfoquery.cpp  getcontrolinfoquery.h  getmailpropertiesquery.cpp  getmailpropertiesquery.h  getpicturepropertiesquery.cpp  getpicturepropertiesquery.h  mailpropertiesquery.cpp  mailpropertiesquery.h  networkquery.h  periodpicturesquery.cpp  periodpicturesquery.h  picturequery.cpp  picturequery.h  processquery.cpp  processquery.h  setcontroltextquery.cpp  setcontroltextquery.h  settingsquery.cpp  settingsquery.h  timedpicturesquery.cpp  timedpicturesquery.h  windowsquery.cpp  windowsquery.h
src/SettingsWindow/: CMakeLists.txt  settingswindow.cpp  settingswindow.h  settingswindow.qrc
src/language/: Client_en.ts  Client_ru.ts  PictureWindow_ru.ts  SettingsWindow_ru.ts
src/library2/: CMakeLists.txt  library2.cpp  library2.h  library2.pro  library2_global.h
